--- a/sgbd/pgsql.settings
+++ b/sgbd/pgsql.settings
@@ -1,10 +1,10 @@
 {
     "options": [],
     "before": [],
-    "args": "-h {options.host} -p {options.port} -U {options.username} -d {options.database}",
+    "args": "-h {host} -p {port} -U {username} -d {database}",
     "queries": {
         "desc" : {
-            "query": "SELECT  '| ' || CASE WHEN n.nspname = current_schema() THEN quote_ident(c.relname) ELSE quote_ident(n.nspname)||'.'||quote_ident(c.relname) END ||' |' AS tblname FROM pg_catalog.pg_class AS c INNER JOIN pg_catalog.pg_namespace AS n ON n.oid = c.relnamespace WHERE relkind = 'r' AND n.nspname NOT IN ('pg_catalog', 'pg_toast', 'information_schema') ORDER BY n.nspname = current_schema() DESC, pg_catalog.pg_table_is_visible(c.oid) DESC, n.nspname, c.relname",
+            "query": "SELECT  '|' || CASE WHEN n.nspname = current_schema() THEN quote_ident(c.relname) ELSE quote_ident(n.nspname)||'.'||quote_ident(c.relname) END ||'|' AS tblname FROM pg_catalog.pg_class AS c INNER JOIN pg_catalog.pg_namespace AS n ON n.oid = c.relnamespace WHERE relkind = 'r' AND n.nspname NOT IN ('pg_catalog', 'pg_toast', 'information_schema') ORDER BY n.nspname = current_schema() DESC, pg_catalog.pg_table_is_visible(c.oid) DESC, n.nspname, c.relname",
             "options": ["-t", "--no-psqlrc"],
             "format" : "|%s|"
         },
@@ -19,7 +19,7 @@
             "format" : "|%s|"
         },
         "columns": {
-            "query": "SELECT DISTINCT table_name, column_name as table_name FROM information_schema.columns WHERE table_schema = CURRENT_SCHEMA() GROUP BY table_name, column_name;",
+            "query": "SELECT DISTINCT '|' || table_name || '.' || column_name || '|' FROM information_schema.columns WHERE table_schema = CURRENT_SCHEMA() GROUP BY table_name, column_name;",
             "options": ["-t", "--no-psqlrc"],
             "format" : "|%s|"
         }
