Trying to fix the download URL
Currently, the download URL points to 'gh-pages' branch which doesn't contain SQLTools code itself.
Not entirely sure this will work, but hopefully this should alter those download links.

--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,9 @@ description: SQLTools for Sublime Text 3
 google_analytics: 
 show_downloads: true
 theme: jekyll-theme-modernist
+github:
+  zip_url: https://github.com/mtxr/SQLTools/zipball/master
+  tar_url: https://github.com/mtxr/SQLTools/tarball/master
 
 gems:
   - jekyll-mentions
