--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Sqltools
 description: SQLTools for Sublime Text 3
-google_analytics: 
+google_analytics: UA-69614909-5
 show_downloads: true
 theme: jekyll-theme-hacker
 github:
