--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Sqltools
 description: SQLTools for Sublime Text 3
 google_analytics: UA-69614909-5
 show_downloads: true
-theme: jekyll/minima
+remote_theme: jekyll/minima
 github:
   zip_url: https://github.com/mtxr/SQLTools/zipball/master
   tar_url: https://github.com/mtxr/SQLTools/tarball/master
